# bad-x86-OS

./: .gdb_history  .gitignore  CMakeLists.txt  Makefile  README.md  bar.txt
applications/counter/: counter.c  counter.h
applications/idle/: idle.c  idle.h
applications/memory_wiper/: memory_wiper.c  memory_wiper.h
applications/reminder/: reminder.c  reminder.h
applications/sema/: sema.c  sema.h
boot/: bootsect.asm  disk.asm  gdt.asm  switch_pm.asm
cpu/: descriptor_tables.c  descriptor_tables.h  gdt_from_c.asm  interrupt.asm  isr.c  isr.h  ports.c  timer.c  timer.h  tss.c  tss.h
drivers/: keyboard.c
kernel/: execute.h  kernel.c  kernel.h  task.c  task.h
libc/: mem.c  mem.h  rust_types.h  string.c
util/: debugging.c  debugging.h  read_std.c  read_std.h
